@@ -48,9 +48,12 @@ crossScalaVersions := Nil
 
 val internalModuleNames = settingKey[Set[String]]("Internal module artifact names to exclude from POM")
 
-// Spark version to delta-spark and its dependent modules
+// Spark compatibility version to delta-spark and its dependent modules.
+// This is also a marker used by CrossSparkVersions.runOnlyForReleasableSparkModules.
 // For more information see CrossSparkVersions.scala
-val sparkVersion = settingKey[String]("Spark version")
+val sparkVersion = settingKey[String]("Spark compatibility version").withRank(KeyRanks.Invisible)
+val sparkArtifactVersion = settingKey[String]("Spark Maven artifact version")
+ThisBuild / sparkArtifactVersion := CrossSparkVersions.getSparkArtifactVersion()
 
 // Dependent library versions
 val defaultSparkVersion = SparkVersionSpec.DEFAULT.fullVersion // Spark version to use for testing in non-delta-spark related modules
@@ -62,6 +65,7 @@ val parquet4sVersion = "1.9.4"
 val protoVersion = "3.25.1"
 val grpcVersion = "1.62.2"
 val flinkVersion = "2.0.1"
+val gcsConnectorVersion = "4.0.4"
 
 // Optional kernel version override. See `project/KernelVersion.scala` for the
 // resolution rule and `-DkernelVersion=<v>` semantics.
@@ -108,7 +112,9 @@ lazy val commonSettings = Seq(
       Seq(  // For Java 17 +
         "--add-opens=java.base/java.nio=ALL-UNNAMED",
         "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
         "--add-opens=java.base/java.net=ALL-UNNAMED",
+        "--add-opens=java.base/java.util=ALL-UNNAMED",
         "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
         "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED"
       )
@@ -184,7 +190,7 @@ lazy val connectCommon = (project in file("spark-connect/common"))
       "com.google.protobuf" % "protobuf-java" % protoVersion % "protobuf",
       "javax.annotation" % "javax.annotation-api" % "1.3.2",
 
-      "org.apache.spark" %% "spark-connect-common" % sparkVersion.value % "provided",
+      "org.apache.spark" %% "spark-connect-common" % sparkArtifactVersion.value % "provided",
     ),
     PB.protocVersion := protoVersion,
     Compile / PB.targets := Seq(
@@ -209,11 +215,11 @@ lazy val connectClient = (project in file("spark-connect/client"))
     },
     libraryDependencies ++= Seq(
       "com.google.protobuf" % "protobuf-java" % protoVersion % "protobuf",
-      "org.apache.spark" %% "spark-connect-client-jvm" % sparkVersion.value % "provided",
+      "org.apache.spark" %% "spark-connect-client-jvm" % sparkArtifactVersion.value % "provided",
 
       // Test deps
       "org.scalatest" %% "scalatest" % scalaTestVersion % "test",
-      "org.apache.spark" %% "spark-connect-client-jvm" % sparkVersion.value % "test" classifier "tests"
+      "org.apache.spark" %% "spark-connect-client-jvm" % sparkArtifactVersion.value % "test" classifier "tests"
     ),
     (Test / javaOptions) += {
       // Create a (mini) Spark Distribution based on the server classpath.
@@ -275,17 +281,17 @@ lazy val connectServer = (project in file("spark-connect/server"))
     libraryDependencies ++= Seq(
       "com.google.protobuf" % "protobuf-java" % protoVersion % "protobuf",
 
-      "org.apache.spark" %% "spark-hive" % sparkVersion.value % "provided",
-      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "provided",
-      "org.apache.spark" %% "spark-core" % sparkVersion.value % "provided",
-      "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "provided",
-      "org.apache.spark" %% "spark-connect" % sparkVersion.value % "provided",
+      "org.apache.spark" %% "spark-hive" % sparkArtifactVersion.value % "provided",
+      "org.apache.spark" %% "spark-sql" % sparkArtifactVersion.value % "provided",
+      "org.apache.spark" %% "spark-core" % sparkArtifactVersion.value % "provided",
+      "org.apache.spark" %% "spark-catalyst" % sparkArtifactVersion.value % "provided",
+      "org.apache.spark" %% "spark-connect" % sparkArtifactVersion.value % "provided",
 
-      "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-core" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-hive" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-connect" % sparkVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-catalyst" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-core" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-sql" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-hive" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-connect" % sparkArtifactVersion.value % "test" classifier "tests",
     ),
     excludeDependencies ++= Seq(
       // Exclude connect common because a properly shaded version of it is included in the
@@ -345,10 +351,10 @@ lazy val sparkV1 = (project in file("spark"))
 
     libraryDependencies ++= Seq(
       // Adding test classifier seems to break transitive resolution of the core dependencies
-      "org.apache.spark" %% "spark-hive" % sparkVersion.value % "provided",
-      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "provided",
-      "org.apache.spark" %% "spark-core" % sparkVersion.value % "provided",
-      "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "provided",
+      "org.apache.spark" %% "spark-hive" % sparkArtifactVersion.value % "provided",
+      "org.apache.spark" %% "spark-sql" % sparkArtifactVersion.value % "provided",
+      "org.apache.spark" %% "spark-core" % sparkArtifactVersion.value % "provided",
+      "org.apache.spark" %% "spark-catalyst" % sparkArtifactVersion.value % "provided",
       // For DynamoDBCommitStore
       "com.amazonaws" % "aws-java-sdk" % "1.12.262" % "provided",
 
@@ -357,10 +363,10 @@ lazy val sparkV1 = (project in file("spark"))
       "org.scalatestplus" %% "scalacheck-1-15" % "3.2.9.0" % "test",
       "junit" % "junit" % "4.13.2" % "test",
       "com.novocode" % "junit-interface" % "0.11" % "test",
-      "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-core" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-hive" % sparkVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-catalyst" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-core" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-sql" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-hive" % sparkArtifactVersion.value % "test" classifier "tests",
       "org.mockito" % "mockito-inline" % "4.11.0" % "test",
     ),
     Compile / packageBin / mappings := (Compile / packageBin / mappings).value ++
@@ -511,9 +517,9 @@ lazy val sparkV2 = {
 
       Test / javaOptions ++= Seq("-ea"),
       libraryDependencies ++= Seq(
-        "org.apache.spark" %% "spark-sql" % sparkVersion.value % "provided",
-        "org.apache.spark" %% "spark-core" % sparkVersion.value % "provided",
-        "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "provided",
+        "org.apache.spark" %% "spark-sql" % sparkArtifactVersion.value % "provided",
+        "org.apache.spark" %% "spark-core" % sparkArtifactVersion.value % "provided",
+        "org.apache.spark" %% "spark-catalyst" % sparkArtifactVersion.value % "provided",
 
         // Test dependencies
         "org.junit.jupiter" % "junit-jupiter-api" % "5.11.4" % "test",
@@ -521,9 +527,9 @@ lazy val sparkV2 = {
         "org.junit.jupiter" % "junit-jupiter-params" % "5.11.4" % "test",
         "com.github.sbt.junit" % "jupiter-interface" % "0.17.0" % "test",
         // Spark test classes for Scala/Java test utilities
-        "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "test" classifier "tests",
-        "org.apache.spark" %% "spark-core" % sparkVersion.value % "test" classifier "tests",
-        "org.apache.spark" %% "spark-sql" % sparkVersion.value % "test" classifier "tests",
+        "org.apache.spark" %% "spark-catalyst" % sparkArtifactVersion.value % "test" classifier "tests",
+        "org.apache.spark" %% "spark-core" % sparkArtifactVersion.value % "test" classifier "tests",
+        "org.apache.spark" %% "spark-sql" % sparkArtifactVersion.value % "test" classifier "tests",
         // ScalaTest for test utilities (needed by Spark test classes)
         "org.scalatest" %% "scalatest" % scalaTestVersion % "test"
       ),
@@ -553,23 +559,21 @@ lazy val spark = (project in file("spark-unified"))
     Test / baseDirectory := (sparkV1 / baseDirectory).value,
 
     // Test sources from spark/ directory (sparkV1's directory) AND spark-unified's own directory,
-    // plus the version-specific shim directory (e.g. `src/test/scala-shims/spark-4.2`).
+    // plus this version's shim directories (e.g. `src/test/scala-shims/spark-4.2` and any
+    // cross-version shared dir like `src/test/scala-shims/spark-4.1-4.2`).
     // MUST be set BEFORE crossSparkSettings() to avoid overwriting version-specific directories.
     Test / unmanagedSourceDirectories := {
       val sparkDir = (sparkV1 / baseDirectory).value
       val unifiedDir = baseDirectory.value
-      // Every supported Spark version sets additionalSourceDir, see SparkVersionSpec.ALL_SPECS.
-      val shimDir = unifiedDir / "src" / "test" / SparkVersionSpec.ALL_SPECS
-        .find(_.fullVersion == sparkVersion.value)
-        .flatMap(_.additionalSourceDir)
-        .get
+      val shimDirs = CrossSparkVersions.getSparkVersionSpec()
+        .additionalSourceDirs
+        .map(dir => unifiedDir / "src" / "test" / dir)
       Seq(
         sparkDir / "src" / "test" / "scala",
         sparkDir / "src" / "test" / "java",
         unifiedDir / "src" / "test" / "scala",
-        unifiedDir / "src" / "test" / "java",
-        shimDir
-      )
+        unifiedDir / "src" / "test" / "java"
+      ) ++ shimDirs
     },
     Test / unmanagedResourceDirectories := Seq(
       (sparkV1 / baseDirectory).value / "src" / "test" / "resources",
@@ -674,10 +678,10 @@ lazy val spark = (project in file("spark-unified"))
     },
 
     libraryDependencies ++= Seq(
-      "org.apache.spark" %% "spark-hive" % sparkVersion.value % "provided",
-      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "provided",
-      "org.apache.spark" %% "spark-core" % sparkVersion.value % "provided",
-      "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "provided",
+      "org.apache.spark" %% "spark-hive" % sparkArtifactVersion.value % "provided",
+      "org.apache.spark" %% "spark-sql" % sparkArtifactVersion.value % "provided",
+      "org.apache.spark" %% "spark-core" % sparkArtifactVersion.value % "provided",
+      "org.apache.spark" %% "spark-catalyst" % sparkArtifactVersion.value % "provided",
       "com.amazonaws" % "aws-java-sdk" % "1.12.262" % "provided",
 
       "org.scalatest" %% "scalatest" % scalaTestVersion % "test",
@@ -688,10 +692,10 @@ lazy val spark = (project in file("spark-unified"))
       "org.junit.jupiter" % "junit-jupiter-engine" % "5.11.4" % "test",
       "org.junit.jupiter" % "junit-jupiter-params" % "5.11.4" % "test",
       "com.github.sbt.junit" % "jupiter-interface" % "0.17.0" % "test",
-      "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-core" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-hive" % sparkVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-catalyst" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-core" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-sql" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-hive" % sparkArtifactVersion.value % "test" classifier "tests",
       "org.mockito" % "mockito-inline" % "4.11.0" % "test",
     ),
 
@@ -798,7 +802,7 @@ lazy val contribs = (project in file("contribs"))
 //
 // Override with -DunityCatalogVersion=<anything> for ad-hoc experiments.
 val unityCatalogReleaseVersion: Option[String] = None
-val defaultUnityCatalogReleaseVersion = "0.4.1"
+val defaultUnityCatalogReleaseVersion = "0.5.0"
 val useDefaultUnityCatalogReleaseVersion: Boolean =
   sys.props.getOrElse("useDefaultUnityCatalogReleaseVersion", "false").toBoolean
 val unityCatalogSetupScript = "project/scripts/setup_unitycatalog_main.sh"
@@ -970,9 +974,9 @@ lazy val sparkUnityCatalog = (project in file("spark/unitycatalog"))
       ),
 
       // Spark test dependencies
-      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "test",
-      "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "test",
-      "org.apache.spark" %% "spark-core" % sparkVersion.value % "test",
+      "org.apache.spark" %% "spark-sql" % sparkArtifactVersion.value % "test",
+      "org.apache.spark" %% "spark-catalyst" % sparkArtifactVersion.value % "test",
+      "org.apache.spark" %% "spark-core" % sparkArtifactVersion.value % "test",
     ),
 
     // Conditionally add hadoop-aws dependency only when UC_REMOTE=true
@@ -1015,7 +1019,7 @@ lazy val sharing = (project in file("sharing"))
     CrossSparkVersions.sparkDependentSettings(sparkVersion),
     Test / javaOptions ++= Seq("-ea"),
     libraryDependencies ++= Seq(
-      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "provided",
+      "org.apache.spark" %% "spark-sql" % sparkArtifactVersion.value % "provided",
 
       "io.delta" %% "delta-sharing-client" % "1.4.0",
 
@@ -1024,10 +1028,10 @@ lazy val sharing = (project in file("sharing"))
       "org.scalatestplus" %% "scalacheck-1-15" % "3.2.9.0" % "test",
       "junit" % "junit" % "4.13.2" % "test",
       "com.novocode" % "junit-interface" % "0.11" % "test",
-      "org.apache.spark" %% "spark-catalyst" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-core" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-sql" % sparkVersion.value % "test" classifier "tests",
-      "org.apache.spark" %% "spark-hive" % sparkVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-catalyst" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-core" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-sql" % sparkArtifactVersion.value % "test" classifier "tests",
+      "org.apache.spark" %% "spark-hive" % sparkArtifactVersion.value % "test" classifier "tests",
     ),
     TestParallelization.settings
   ).configureUnidoc()
@@ -1408,7 +1412,7 @@ lazy val iceberg = (project in file("iceberg"))
           "org.apache.httpcomponents.client5" % "httpclient5" % "5.3.1" % "test",
           "org.apache.iceberg" %% icebergSparkRuntimeArtifactName % "1.11.0" % "provided",
           // For FixedGcsAccessTokenProvider (GCS server-side planning credentials)
-          "com.google.cloud.bigdataoss" % "util-hadoop" % "hadoop3-2.2.26" % "provided"
+          "com.google.cloud.bigdataoss" % "util-hadoop" % gcsConnectorVersion % "provided"
         )
       } else {
         Seq.empty
@@ -1579,7 +1583,7 @@ lazy val hudi = (project in file("hudi"))
             ExclusionRule(organization = "org.apache.hadoop"),
             ExclusionRule(organization = "org.apache.zookeeper"),
           ),
-          "org.apache.spark" %% "spark-avro" % sparkVersion.value % "test" excludeAll ExclusionRule(organization = "org.apache.hadoop"),
+          "org.apache.spark" %% "spark-avro" % sparkArtifactVersion.value % "test" excludeAll ExclusionRule(organization = "org.apache.hadoop"),
           "org.apache.parquet" % "parquet-avro" % "1.16.0" % "compile"
         )
       } else {
@@ -1683,7 +1687,12 @@ lazy val flink = (project in file("flink"))
       "dev.failsafe" % "failsafe" % "3.2.0",
       "com.github.ben-manes.caffeine" % "caffeine" % "3.1.8",
       "org.apache.hadoop" % "hadoop-aws" % hadoopVersion,
-      "com.google.cloud.bigdataoss" % "gcs-connector" % "hadoop3-2.2.31" % Provided,
+      "com.google.cloud.bigdataoss" % "gcs-connector" % gcsConnectorVersion % Provided classifier "shaded",
+      // kernel-api uses RoaringBitmap but ships as a shaded fat-jar that excludes it, and the
+      // unmanagedJars trick used above does not propagate kernel-api's managed deps. Declare it
+      // here too -- pinned to the same version kernel-api uses -- so our DV code under
+      // io.delta.flink.kernel.dv compiles against the same library on the classpath.
+      "org.roaringbitmap" % "RoaringBitmap" % "0.9.25",
 
       // Test dependencies
       "org.junit.jupiter" % "junit-jupiter-api" % "5.11.4" % "test",
